Added content to html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Here is my Naruto website</h1>
+    <p>very cool content</p>
 </body>
 </html>
