--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Here is my Naruto website</h1>
     <p>very cool content</p>
+     <img src="https://i.kym-cdn.com/entries/icons/mobile/000/024/189/DLlxNiOWsAAxf4l.jpg" alt=""> 
 </body>
 </html>
