--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Here is my Naruto website</h1>
     <p>very cool content</p>
      <img src="https://i.kym-cdn.com/entries/icons/mobile/000/024/189/DLlxNiOWsAAxf4l.jpg" alt=""> 
+     <script src="script.js"></script>
 </body>
 </html>
